--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -7,6 +7,7 @@
   {% for task in tasks %}
   <tr>
     <td>{{ task.title }}</td>
+    <td><a href="{% url 'task_details' task.id %}">View</a></td>
   </tr>
   {% empty %}
   <tr>
