--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -1,5 +1,6 @@
 {% extends './base.html' %} {% block content %}
 <h2>Task List</h2>
+<a href="{% url 'create_task' %}">New Task</a>
 <table>
   <tr>
     <th>Items</th>
