feat: update task

--- a/base/templates/base/task_form.html
+++ b/base/templates/base/task_form.html
@@ -5,6 +5,7 @@
   <table>
     {{ form.as_table }}
   </table>
+  <a href="{% url 'tasks_list' %}">Cancel</a>
   <input type="submit" value="Save" />
 </form>
 {% endblock content %}
