--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -10,6 +10,7 @@
     <td>{{ task.title }}</td>
     <td><a href="{% url 'task_details' task.id %}">View</a></td>
     <td><a href="{% url 'udpate_task' task.id %}">Edit</a></td>
+    <td><a href="{% url 'delete_task' task.id %}">Delete</a></td>
   </tr>
   {% empty %}
   <tr>
