--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -6,6 +6,13 @@
     <title>ToDos</title>
   </head>
   <body>
+    {% if request.user.is_authenticated %}
+    <span>{{request.user}}</span>
+    <a href="{% url 'logout' %}">Logout</a>
+    {% else %}
+    <a href="{% url 'login' %}">Login</a>
+    {% endif %}
+    <hr />
     {% block content %}{% endblock %}
   </body>
 </html>
