--- a/base/templates/base/register.html
+++ b/base/templates/base/register.html
@@ -1,11 +1,11 @@
 {% extends './base.html' %} {% block content %}
-<h2>Login</h2>
+<h2>Register</h2>
 <form method="post">
   {% csrf_token %}
   <table>
     {{ form.as_table }}
   </table>
-  <input type="submit" value="Login" />
+  <input type="submit" value="Register" />
 </form>
-<p>Don't have an account? <a href="{% url 'register' %}">Register</a></p>
+<p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
 {% endblock content %}
