--- a/base/templates/base/task_confirm_delete.html
+++ b/base/templates/base/task_confirm_delete.html
@@ -2,7 +2,9 @@
 <form method="post">
   {% csrf_token %}
   <h2>Are you sure you want to delete "{{ task.title }}"?</h2>
-  <a href="{% url 'tasks_list' %}">Cancel</a>
-  <input type="submit" value="Confirm" />
+  <div class="action-btns">
+    <a href="{% url 'tasks_list' %}">Cancel</a>
+    <input class="btn" type="submit" value="Confirm" />
+  </div>
 </form>
 {% endblock content %}
