--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -5,7 +5,7 @@
   <table>
     {{ form.as_table }}
   </table>
-  <input type="submit" value="Login" />
+  <input class="btn btn-primary" type="submit" value="Login" />
 </form>
 <p>Don't have an account? <a href="{% url 'register' %}">Register</a></p>
 {% endblock content %}
