--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -1,30 +1,42 @@
 {% extends './base.html' %} {% block content %}
-<h2>Task List</h2>
-<a href="{% url 'create_task' %}">New Task</a>
-<form method="get">
-  <input
-    type="text"
-    name="search_field"
-    value="{{search_key}}"
-    placeholder="Search tasks"
-  />
-  <input type="submit" value="Submit" />
-</form>
-<table>
-  <tr>
-    <th>Items</th>
-  </tr>
+<div class="tasks-topbar-actions">
+  <form method="get">
+    <input
+      type="text"
+      name="search_field"
+      value="{{search_key}}"
+      placeholder="Search tasks"
+    />
+    <input type="submit" value="Search" />
+  </form>
+  <a id="new-task-btn" class="btn" href="{% url 'create_task' %}">New Task</a>
+</div>
+
+<p class="due-tasks-info">You have {{count}} tasks due</p>
+<div id="tasks-list">
   {% for task in tasks %}
-  <tr>
-    <td>{{ task.title }}</td>
-    <td><a href="{% url 'task_details' task.id %}">View</a></td>
-    <td><a href="{% url 'udpate_task' task.id %}">Edit</a></td>
-    <td><a href="{% url 'delete_task' task.id %}">Delete</a></td>
-  </tr>
-  {% empty %}
-  <tr>
-    <td>No tasks available</td>
-  </tr>
+  <a href="{% url 'udpate_task' task.id %}">
+    <div class="task">
+      {% if task.is_done %}
+      <div class="task-details completed-task">
+        <h3>{{ task.title }}</h3>
+        <p>{{ task.description }}</p>
+      </div>
+      {% else %}
+      <div class="task-details">
+        <h3>{{ task.title }}</h3>
+        <p>{{ task.description }}</p>
+      </div>
+      {% endif %}
+      <a href="{% url 'delete_task' task.id %}">
+        <!-- Delete -->
+        <img
+          src="https://img.icons8.com/material-outlined/24/000000/trash.png"
+          alt="delete"
+        />
+      </a>
+    </div>
+  </a>
   {% endfor %}
-</table>
+</div>
 {% endblock content %}
